--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Hello World</h1>
         <p>
-            Ginni was here.
+            Ginni was here. V2
         </p>
     </body>
 </html>
